@@ -271,83 +271,6 @@ void fasp_blas_dblc_mxv (dBLCmat  *A,
     
 }
 
-/**
- * \fn void fasp_blas_bdbsr_aAxpy (const REAL alpha, block_BSR *A, 
- *                                 REAL *x, REAL *y)
- *
- * \brief Matrix-vector multiplication y = alpha*A*x + y
- *
- * \param alpha  REAL factor a
- * \param A      Pointer to block_BSR matrix A
- * \param x      Pointer to array x
- * \param y      Pointer to array y
- *
- * \author Xiaozhe Hu
- * \date   11/11/2010
- */
-void fasp_blas_bdbsr_aAxpy (const REAL  alpha,
-                            block_BSR  *A,
-                            REAL       *x,
-                            REAL       *y)
-{
-    register dBSRmat *Arr = &(A->ResRes);
-    register dCSRmat *Arw = &(A->ResWel);
-    register dCSRmat *Awr = &(A->WelRes);
-    register dCSRmat *Aww = &(A->WelWel);
-    
-    unsigned INT Nr = Arw->row;
-    
-    register REAL *xr = x;
-    register REAL *xw = &(x[Nr]);
-    register REAL *yr = y;
-    register REAL *yw = &(y[Nr]);
-    
-    // yr = alpha*Arr*xr + alpha*Arw*xw + yr
-    fasp_blas_dbsr_aAxpy(alpha, Arr, xr, yr);
-    fasp_blas_dcsr_aAxpy(alpha, Arw, xw, yr);
-    
-    // yw = alpha*Awr*xr + alpha*Aww*xw + yw
-    fasp_blas_dcsr_aAxpy(alpha, Awr, xr, yw);
-    fasp_blas_dcsr_aAxpy(alpha, Aww, xw, yw);
-}
-
-/**
- * \fn void fasp_blas_bdbsr_mxv (block_BSR *A, REAL *x, REAL *y)
- *
- * \brief Matrix-vector multiplication y = A*x
- *
- * \param A      Pointer to block_BSR matrix A
- * \param x      Pointer to array x
- * \param y      Pointer to array y
- *
- * \author Xiaozhe Hu
- * \date   11/11/2010
- */
-void fasp_blas_bdbsr_mxv (block_BSR  *A,
-                          REAL       *x,
-                          REAL       *y)
-{
-    register dBSRmat *Arr = &(A->ResRes);
-    register dCSRmat *Arw = &(A->ResWel);
-    register dCSRmat *Awr = &(A->WelRes);
-    register dCSRmat *Aww = &(A->WelWel);
-    
-    unsigned INT Nr = Arw->row;
-    
-    register REAL *xr = x;
-    register REAL *xw = &(x[Nr]);
-    register REAL *yr = y;
-    register REAL *yw = &(y[Nr]);
-    
-    // yr = alpha*Arr*xr + alpha*Arw*xw + yr
-    fasp_blas_dbsr_mxv(Arr, xr, yr);
-    fasp_blas_dcsr_aAxpy(1.0, Arw, xw, yr); 
-    
-    // yw = alpha*Awr*xr + alpha*Aww*xw + yw
-    fasp_blas_dcsr_mxv(Awr, xr, yw); 
-    fasp_blas_dcsr_aAxpy(1.0, Aww, xw, yw); 
-}
-
 /*---------------------------------*/
 /*--        End of File          --*/
 /*---------------------------------*/
